--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <hr>
     <div>
-        <span><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Back to home</a></span>
+        <span><a routerLink="/" routerLinkActive="active">Back to home</a></span>
         <span> | </span>
         <span>mdsparks17@gmail.com</span>
     </div>
