--- a/src/app/components/tag-list/tag-list.component.scss
+++ b/src/app/components/tag-list/tag-list.component.scss
@@ -1,10 +1,10 @@
 @import "/src/variables";
 
 .tag:hover {
-    color: $primary3;
+    color: $hover;
     cursor: pointer;
 }
 
 a {
-    color: $hover; text-decoration: none;
+    color: $text; text-decoration: none;
 }
