--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -7,10 +7,10 @@
         <p>This is my personal site for anything I feel like publishing or blabbing about. I plan to upload some of my
             projects, hobbies, comments, blogs, listicles, and generally anything I find of interest.</p>
     </div>
-    <img class="arizona" src="./assets/images/arizona-spin.gif">
+    <img class="arizona" alt="Spinning Arizona Green Tea can" src="./assets/images/arizona-spin.gif">
 </div>
 <h3>About Me</h3>
-<p>IRL my name is Michael Sparks (he/him 24), I am a fullstack software developer by trade. I have a degree in CS from
+<p>IRL my name is Michael Sparks (he/him 24). I am a fullstack software developer by trade living in Seattle, WA. I have a degree in CS from
     UNC Chapel-Hill and am currently working on my MBA. When I'm not working for
     my corporate overlords I enjoy meetups, skating, gym, piano, and whatever hobby I randomly
     have fallen into for the month.</p>
@@ -20,7 +20,8 @@
 
 <h3>Why "ThePlug"?</h3>
 <p>Since this was originally planned to be a professional personal site, I wanted to have some pun based off my last
-    name 'Sparks'. Sparkle? Spark... something? Spark Plug? Eventually I just landed on 'ThePlug'. I think it works.</p>
+    name 'Sparks'. Sparkle? Spark... something? Spark Plug? Eventually I just landed on 'ThePlug'. I think it works. Making
+    connections? Plugging the gaps?</p>
 
 <div class="row">
     <div>
@@ -29,7 +30,7 @@
             to say.</p>
         <p><i>mdsparks17@gmail.com</i></p>
     </div>
-    <img class="pennletter" src="./assets/images/pennletter.gif">
+    <img class="pennletter" alt="Hand signing a letter" src="./assets/images/pennletter.gif">
 </div>
 
 <app-footer></app-footer>
