--- a/src/app/pages/anime/anime.component.html
+++ b/src/app/pages/anime/anime.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-title myPageName='Anime'></app-title>
+<app-title myPageName='Anime List'></app-title>
 
 <p>Below are some of my favorite anime picks delimited by some categories to help find what you are looking for. You
     can also see my complete list <a
@@ -8,14 +8,14 @@
 </p>
 
 <div class="center">
-    <img src="./assets/images/anime-waifu.gif">
+    <img src="./assets/images/anime-waifu.gif" alt="Dancing Nezuko from 'Demon Slayer'">
 </div>
 
 <h3>Entry-Level Watches</h3>
 <p>For new anime watchers or convincing your friends that some anime aren't all trash.</p>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/one-punch-man.jpg">
+    <img class="poster" alt="One Punch Man poster" src="./assets/images/one-punch-man.jpg">
     <div class="column description">
         <h3>One Punch Man</h3>
         <p class="meta-text">Some guy decides to become a superhero for fun and learns how to destroy enemies with - you
@@ -25,7 +25,7 @@
 </div>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/mob-psycho-100.jpg">
+    <img class="poster" alt="Mob Psycho 100 poster" src="./assets/images/mob-psycho-100.jpg">
     <div class="column description">
         <h3>Mob Psycho 100</h3>
         <p class="meta-text">A middle schooler with awesome psychic power learns how to live a normal life. This anime
@@ -35,7 +35,7 @@
 </div>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/fma-b.jpg">
+    <img class="poster" alt="Fullmetal Alchemist: Brotherhood poster" src="./assets/images/fma-b.jpg">
     <div class="column description">
         <h3>Fullmetal Alchemist: Brotherhood</h3>
         <p class="meta-text">Two brothers working as state alchemists search for a philosopher's stone after a failed
@@ -48,7 +48,7 @@
 <p>For when you need a break/something light to watch with a partner.</p>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/yuri-on-ice.jpg">
+    <img class="poster" alt="Yuri On Ice poster" src="./assets/images/yuri-on-ice.jpg">
     <div class="column description">
         <h3>Yuri On Ice</h3>
         <p class="meta-text">It's hot men. They ice skate. I don't think I need to elaborate.</p>
@@ -56,7 +56,7 @@
 </div>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/ohshc.jpg">
+    <img class="poster" alt="Ouran High School Host Club poster" src="./assets/images/ohshc.jpg">
     <div class="column description">
         <h3>Ouran High School Host Club</h3>
         <p class="meta-text">Girl joins a new school and becomes a member of the "host club". Its a cheesy self-aware
@@ -65,7 +65,7 @@
 </div>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/saiki-k.jpg">
+    <img class="poster" alt="Saiki K poster" src="./assets/images/saiki-k.jpg">
     <div class="column description">
         <h3>Saiki K</h3>
         <p class="meta-text">A young psychic hides his powers from his friends in a desperate attempt to appear normal.
@@ -77,7 +77,7 @@
 <p>If you like searching "what did this mean?" after watching something then you might like these.</p>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/serial-experiments-lain.jpg">
+    <img class="poster" alt="Serial Experiments Lain poster" src="./assets/images/serial-experiments-lain.jpg">
     <div class="column description">
         <h3>Serial Experiments Lain</h3>
         <p class="meta-text">Plays with the idea of internet culture before most of us were actually online. It is
@@ -86,7 +86,7 @@
 </div>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/neon-genesis.jpg">
+    <img class="poster" alt="Neon Genesis Evangelion poster" src="./assets/images/neon-genesis.jpg">
     <div class="column description">
         <h3>Neon Genesis Evangelion</h3>
         <p class="meta-text">The pro-typical anime reccomendation. It's a mecha anime but really gets that noggin joggin
@@ -99,7 +99,7 @@
     secretly being good.</p>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/black-lagoon.jpg">
+    <img class="poster" alt="Black Lagoon poster" src="./assets/images/black-lagoon.jpg">
     <div class="column description">
         <h3>Black Lagoon</h3>
         <p class="meta-text">A typical japanese businessman gets involved with mercinaries in south-east Asia. Don't
@@ -108,7 +108,7 @@
 </div>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/overlord.jpg">
+    <img class="poster" alt="Overlord poster" src="./assets/images/overlord.jpg">
     <div class="column description">
         <h3>Overlord</h3>
         <p class="meta-text">Some turbonerd gamer gets transported to a world where he can use his broken game stats to
@@ -117,7 +117,7 @@
 </div>
 
 <div class="spacer orient-left">
-    <img class="poster" src="./assets/images/hellsing-ultimate.jpg">
+    <img class="poster" alt="Hellsing Ultimate poster" src="./assets/images/hellsing-ultimate.jpg">
     <div class="column description">
         <h3>Hellsing Ultimate</h3>
         <p class="meta-text">A vampire killing vampires? A priest that weilds bayonetts as swords? An ex-cop that loves
