--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <div class="center column">
-    <img class="neco-shrug" src="./assets/images/neco-shrug.gif">
+    <img class="neco-shrug" alt="Chibi neco arc shrugging" src="./assets/images/neco-shrug.gif">
     <h1>404: Page not available</h1>
-    <a routerLink="" routerLinkActive="active" ariaCurrentWhenActive="page">Return Home</a>
+    <a routerLink="" routerLinkActive="active">Return Home</a>
 </div>
 
