--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,41 +1,42 @@
 // @import "/src/variables";
 
-// DARK THEME
-// $text: #ffffff;        // text
-// $hover: #C0D0D8;     // hover text
-// $primary3: #4F5F72;       // active
-// $primary2: #2f3947;       // hover
-// $primary: #202732;       // component background
-// $background: #181818;       // background
+// GRUVBOX THEME
+$text: #d4be98;         // text
+$hover: #fae0b3;        // hover text
+$primary3: #776b65;     // active
+$primary2: #514945;     // hover
+$primary: #1d1b19;      // component background
+$background: #202020;   // background
 
-// $yellow: #B47304;       
-// $orange: #A53E12;
-// $red: #A21C15;
-// $green: #A8A84D;        // quotes
-// $teal: #13705C;
-// $blue: #00B8AB;         // links
+$red: #ea6962;          // #blog
+$orange: #ea8a62;       // #list
+$yellow: #d8a657;       
+$green: #a9b665;        // quotes
+$teal: #65b68c;         // #meta
+$blue: #7daea3;         // links
+$magenta: #d3869b;
 
-// LIGHT THEME
-$text: #000000;        // text
-$hover: #181818;     // hover text
-$primary3: #52554d;       // active
-$primary2: #ced6c2;       // hover
-$primary: #bec5b9;       // component background
-$background: #fff8eb;       // background
+// GRUVBOX RAW
+// black   514945
+// red     ea6962
+// green   a9b665
+// yellow  d8a657
+// blue    7daea3
+// magenta d3869b
+// cyan    89b482
+// white   d4be98
+// default 202020
 
-$yellow: #B47304;       
-$orange: #A53E12;
-$red: #A21C15;
-$green: #757535;        // quotes
-$teal: #13705C;
-$blue: #00B8AB;         // links
-
-.theme { filter: invert(100%); }
+// this converts white images into themed colors
+.theme {
+    filter: invert(12%) sepia(14%) saturate(700%) hue-rotate(353deg) brightness(88%) contrast(70%);
+}
 
 // MY FONTS
+$font: Roboto, Arial, Helvetica, sans-serif;
+
 @font-face {
     font-family: 'Roboto';
     src: url('./assets/fonts/Roboto-Regular.ttf');
 }
 
-$font: Roboto, Arial, Helvetica, sans-serif;
