--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,11 +2,11 @@
 
 footer {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
 
-    height: 6rem;
+    // height: 6rem;
+    min-height: 6rem;
 }
 
 a { font-family: $font; color: $text; text-decoration: underline; }
