--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,13 @@
 <header>
-    <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
-        <img class="logo theme" src="./assets/images/Logo.png">
+    <a routerLink="/" routerLinkActive="active">
+        <img class="logo theme" alt="Logo" src="./assets/images/Logo.png">
     </a>
     <nav>
-        <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
+        <a routerLink="/about" routerLinkActive="active" title="about this website">
             <button class="button ">About</button></a>
-        <a routerLink="/sitemap" routerLinkActive="active" ariaCurrentWhenActive="page">
+        <a routerLink="/sitemap" routerLinkActive="active">
             <button class="button ">SiteMap</button></a>
-        <a routerLink="/search" routerLinkActive="active" ariaCurrentWhenActive="page">
+        <a routerLink="/search" routerLinkActive="active">
             <button class="button ">Search</button></a>
     </nav>
 </header>
