--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,14 +7,6 @@
     <img class="bmo spacer" src="./assets/images/bmo.gif">
 </div> -->
 
-<div *ngFor="let page of mypages.pages">
-    <a [routerLink]=[page.route] routerLinkActive="active" ariaCurrentWhenActive="page">
-        <div class="button card">
-            <h3>{{ page.name }}</h3>
-            <app-tag-list [myTags]="page.tags"></app-tag-list>
-            <p class="meta-text">{{ page.metadata.lastUpdatedTimestamp }}</p>
-        </div>
-    </a>
-</div>
+<app-card-list [cardList]=mypages.pages></app-card-list>
 
 <app-footer></app-footer>
