--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,5 +4,7 @@
         <span><a routerLink="/" routerLinkActive="active">Back to home</a></span>
         <span> | </span>
         <span>mdsparks17@gmail.com</span>
+        <span> | </span>
+        <span class="teal">Site Last Updated: 2023/03/22</span>
     </div>
 </footer>
