--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,6 +4,7 @@
         <span><a routerLink="/" routerLinkActive="active"><img class="icon theme" alt="Logo" src="./assets/images/home.png"></a></span>
         <span><a href="https://discord.com/channels/567034701999636490" target="_blank"><img class="icon theme" alt="Logo" src="./assets/images/discord.png"></a></span>
         <span><a href="mailto:mdsparks17@gmail.com"><img class="icon theme" alt="Logo" src="./assets/images/mail.png"></a></span>
+        <span><a href="./assets/index.xml">RSS Feed</a></span>
     </div>
 </footer>
 
